Bugfix: Basic page content overflow issue.

--- a/src/components/Ui/BasicPage/style.scss
+++ b/src/components/Ui/BasicPage/style.scss
@@ -1,10 +1,17 @@
 .basic-page {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
   height: 100%;
-  padding: 20px;
+
+  &__content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    max-height: 100%;
+    padding: 20px;
+    overflow: auto;
+  }
 
   &__headings {
     width: 100%;
